Make sure section ids icons overflow nicely in hunt optimizer.

--- a/src/ui/hunt-optimizer/OptimizationResultComponent.less
+++ b/src/ui/hunt-optimizer/OptimizationResultComponent.less
@@ -11,6 +11,8 @@
 
 .ho-OptimizationResultComponent-sid-col {
     display: inline-block;
+    overflow: hidden;
+    white-space: nowrap;
     height: 20px;
     margin: 0 3px;
 }
